--- a/assets/jsconfig.json
+++ b/assets/jsconfig.json
@@ -3,8 +3,8 @@
   "baseUrl": ".",
   "paths": {
    "*": [
-    "../../../../../../tmp/hugo_cache/modules/filecache/modules/pkg/mod/gitlab.com/writeonlyhugo/writeonlyhugo-theme@v0.0.0-20230104081505-ab4312f463b3/_vendor/github.com/twbs/bootstrap/js/*",
-    "../../../../../../tmp/hugo_cache/modules/filecache/modules/pkg/mod/gitlab.com/writeonlyhugo/writeonlyhugo-theme@v0.0.0-20230104081505-ab4312f463b3/assets/*"
+    "../../../../.cache/hugo_cache/modules/filecache/modules/pkg/mod/gitlab.com/writeonlyhugo/writeonlyhugo-theme@v0.0.0-20230104081505-ab4312f463b3/_vendor/github.com/twbs/bootstrap/js/*",
+    "../../../../.cache/hugo_cache/modules/filecache/modules/pkg/mod/gitlab.com/writeonlyhugo/writeonlyhugo-theme@v0.0.0-20230104081505-ab4312f463b3/assets/*"
    ]
   }
  }
